<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@android:color/darker_gray"
    tools:context=".LeftFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_preto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="#000000"
            android:text="@string/btn_preto"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="#0000FF"
            android:text="@string/btn_azul"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_verde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="#008000"
            android:text="@string/btn_verde"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_vermelho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="#FF0000"
            android:text="@string/btn_vermelho"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btn_amarelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/marginButton"
            android:backgroundTint="#FFFF00"
            android:text="@string/btn_amarelo"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>


</FrameLayout>